--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,6 +1,6 @@
 Flask==2.0.1
-beautifulsoup4==4.10.0
 gevent==21.8.0
 requests==2.26.0
 gunicorn==20.1.0
 web3==5.24.0
+mysql-connector-python==8.0.27
