--- a/www/package.json
+++ b/www/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.7.1",
     "@mui/icons-material": "^5.2.4",
     "@mui/material": "^5.2.4",
+    "@mui/system": "^5.2.6",
     "@mui/utils": "^5.2.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -15,11 +16,20 @@
     "web-vitals": "^2.1.2"
   },
   "devDependencies": {
+    "eslint": "^8.5.0",
+    "eslint-config-airbnb": "^19.0.3",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "react-error-overlay": "6.0.10"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "lint": "npx eslint src/",
+    "lint:fix": "npx eslint --fix src/",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
