--- a/api/app.yaml
+++ b/api/app.yaml
@@ -12,20 +12,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-runtime: python
-env: flex
-entrypoint: gunicorn -b :$PORT main:app
+runtime: python39
 
-runtime_config:
-  python_version: 3
-
-# This sample incurs costs to run on the App Engine flexible environment.
-# The settings below are to reduce costs during testing and are not appropriate
-# for production use. For more information, see:
-# https://cloud.google.com/appengine/docs/flexible/python/configuring-your-app-with-app-yaml
-manual_scaling:
-  instances: 1
-resources:
-  cpu: 1
-  memory_gb: 0.5
-  disk_size_gb: 10
+env_variables:
+  CLOUD_SQL_USERNAME: root
+  CLOUD_SQL_DATABASE_NAME: nft
+  CLOUD_SQL_CONNECTION_NAME: first-scout-330903:us-central1:nft-mysql-dev
