--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,20 +1,21 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
-exclude: 'www/package-lock.json'
+exclude: "nfttax/package-lock.json"
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
+  - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v3.2.0
     hooks:
-    -   id: trailing-whitespace
-    -   id: end-of-file-fixer
-    -   id: check-yaml
-    -   id: check-added-large-files
--   repo: https://github.com/pycqa/isort
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: check-yaml
+      - id: check-added-large-files
+  - repo: https://github.com/pycqa/isort
     rev: 5.10.1
     hooks:
-    -   id: isort
+      - id: isort
+        args: ["--profile", "black"]
         name: isort (python)
--   repo: https://github.com/psf/black
+  - repo: https://github.com/psf/black
     rev: 19.3b0
     hooks:
-    -   id: black
+      - id: black
