--- a/nfttax/package.json
+++ b/nfttax/package.json
@@ -2,10 +2,14 @@
   "name": "nfttax",
   "version": "0.0.0",
   "homepage": "https://xia0pin9.github.io/",
+  "type": "commonjs",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "cross-env NODE_ENV=development node server.js",
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "vite build --outDir dist/client --ssrManifest",
+    "build:server": "vite build --outDir dist/server --ssr src/server.main.jsx",
+    "start": "cross-env NODE_ENV=production node server.js",
+    "debug": "node --inspect-brk server.js"
   },
   "dependencies": {
     "@emotion/styled": "^11.6.0",
@@ -13,11 +17,15 @@
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.7",
     "@mui/utils": "^5.2.3",
-    "axios": "^0.24.0",
-    "gh-pages": "^3.2.3",
+    "@vitejs/plugin-react": "^1.1.4",
+    "compression": "^1.7.4",
+    "cross-env": "^7.0.3",
+    "express": "^4.17.2",
+    "history": "^5.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
+    "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-table": "^7.7.0",
     "react-transition-group": "^4.4.2",
@@ -27,7 +35,9 @@
     "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^1.0.7",
+    "@rollup/plugin-replace": "^3.0.1",
+    "@types/node": "^17.0.8",
+    "@types/react-dom": "^17.0.11",
     "autoprefixer": "^10.4.1",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.8",
