--- a/nfttax/package.json
+++ b/nfttax/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.2.7",
     "@mui/utils": "^5.2.3",
     "@vitejs/plugin-react": "^1.1.4",
+    "@redux-devtools/extension": "^3.0.6",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "express": "^4.17.2",
@@ -28,7 +29,6 @@
     "react-table": "^7.7.0",
     "react-transition-group": "^4.4.2",
     "redux": "^4.1.2",
-    "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1"
   },
